testsuite/tests/rename/should_fail/T14907b.stderr

T14907b.hs:5:1: error: [GHC-69639]
    Illegal binding of built-in syntax: ()

T14907b.hs:6:1: error: [GHC-69639]
    Illegal binding of built-in syntax: (,)

T14907b.hs:7:1: error: [GHC-69639]
    Illegal binding of built-in syntax: (,,)
